--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/ApiTests/v17/TestStore/0
 /.vs/ApiTests/FileContentIndex/d107a987-acf6-4a64-9306-edcd965e2d35.vsidx
+/.vs/ApiTests/DesignTimeBuild
+/.vs/ProjectEvaluation
+/.vs/ApiTests/v17/.futdcache.v1
